<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    tools:context="com.example.android.pacosbirrias.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextView"
            android:text="@string/description"
            android:textSize="@dimen/header1_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:paddingBottom="@dimen/bottom_padding"
            android:scaleType="centerInside"
            android:src="@drawable/birria" />

        <TextView
            style="@style/TextView"
            android:text="@string/app_name"
            android:textSize="@dimen/header2_size" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/note_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/note"/>

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_below="@id/note_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc2"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home"/>

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_below="@id/home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/clock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clock"/>

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_below="@id/clock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
